# BmScriptsBox

./: .gitignore  BmScriptsBox.cmd  LICENSE  README.md  config.json  main.py  pyproject.toml  update.ps1
BmContext/: RegisterContext.bat  UninstallContext.bat  W11MenuStyleSwitch.bat
app/data/: __init__.py  database.py  globalVariables.py  model.py  schemas.py  toml_schemas.py
app/resources/: LICENSE.TXT  THIRD-PARTY LICENSES.txt  banner.json  configs.json
app/resources/i18n/: zh_CN.qm  zh_CN.ts
app/servers/context/: __init__.py  context_manager.py
app/servers/environment/: __init__.py  ahk_env_manager.py  git_manager.py  node_env_manager.py  py_env_manager.py  toml_manager.py
app/servers/explorer/: __init__.py  com_utils.py  desktop_utils.py  manager.py  selectors.py
app/servers/http_local/: __init__.py  flaskService.py
app/servers/monitor/: __init__.py  clipboard_monitor.py  double_monitor.py  hotkeyManager.py  mouse_monitor.py
app/servers/scheduled_core/: __init__.py  scheduled_core.py
app/servers/scripts/: __init__.py  script_install.py  script_run.py
app/utils/: __init__.py  bm_notify.py  log_manager.py  parameter_generate.py  tools.py
app/view/: __init__.py
app/view/context_ui/: __init__.py  context_model.py  context_pr.py  contexts_display.py
app/view/fast_text_ui/: __init__.py  fast_test_win_disp.py  fast_text_signal.py  fast_text_win_menu.py
app/view/hotkey_ui/: __init__.py  hotkey_model.py  hotkey_pr.py  hotkey_win_disp.py  (+1 more)
app/works/: __init__.py  script_work.py  work_config.py  work_http.py  work_manager.py  work_scheduled.py
(+64 files in other folders)
