[project]
name = "bmscriptsbox"
version = "1.0.4"
description = "BmScriptsBox - Windows跨语言脚本调度与管理软件"
readme = "README.md"
requires-python = ">=3.8"
license = "AGPL-3.0"
authors = [
    {name = "綦恒智", email = "bmscriptsbox@163.com"}
]
keywords = ["script-manager", "automation", "hotkey", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "PySide2==5.15.2.1",
    "xsideui==0.9.6",
    "flask==3.0.3",
    "requests==2.32.4",
    "peewee==4.0.6",
    "pydantic==2.10.6",
    "pygit2",
    "schedule==1.2.2",
    "pynput==1.8.2",
    "toml==0.10.2",
    "packaging==26.2",
    "pywin32==311",
    "keyboard==0.13.5"
]

[project.urls]
Homepage = "https://www.bm-box.cn"
Repository = "https://github.com/bm-qihengzhi/BmScriptsBox"
Issues = "https://github.com/bm-qihengzhi/BmScriptsBox/issues"
